Sandbox/force-app/main/default/objects/BRIT__c/BRIT__c.object-meta.xml
<CustomObject>
    <label>BRIT</label>
    <nameField>
        <displayFormat>BRIT-{000000}</displayFormat>
        <label>Nome BRIT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRITs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>