Sandbox/force-app/main/default/objects/BRIT__c/fields/CUSTOMER_CENTRICITY_Connected_Car__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_CENTRICITY_Connected_Car__c</fullName>
    <description>CUSTOMER CENTRICITY - Connected Car</description>
    <label>CUSTOMER CENTRICITY - Connected Car</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>