Sandbox/force-app/main/default/objects/BRIT__c/fields/PEOPLE_Digital_Customer_Advisor__c.field-meta.xml
<CustomField>
    <fullName>PEOPLE_Digital_Customer_Advisor__c</fullName>
    <description>PEOPLE - Digital Customer Advisor</description>
    <label>PEOPLE - Digital Customer Advisor</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>