Sandbox/force-app/main/default/objects/BRIT__c/fields/PEOPLE_Employee_Engagement_Survey__c.field-meta.xml
<CustomField>
    <fullName>PEOPLE_Employee_Engagement_Survey__c</fullName>
    <description>PEOPLE - Employee Engagement Survey</description>
    <label>PEOPLE - Employee Engagement Survey</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>