Sandbox/force-app/main/default/objects/BRIT__c/fields/PRECOND_ACCESSO_Perf_NPS_more_75__c.field-meta.xml
<CustomField>
    <fullName>PRECOND_ACCESSO_Perf_NPS_more_75__c</fullName>
    <description>PRECONDIZIONI DI ACCESSO - Perf. NPS &gt; 75%</description>
    <label>PRECOND. ACCESSO - Perf. NPS &gt; 75%</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>