Sandbox/force-app/main/default/objects/BRIT__c/fields/PRECOND_ACCESSO_Perf_Sales_more_95__c.field-meta.xml
<CustomField>
    <fullName>PRECOND_ACCESSO_Perf_Sales_more_95__c</fullName>
    <description>PRECONDIZIONI DI ACCESSO - Perf. Sales &gt; 95%</description>
    <label>PRECOND. ACCESSO - Perf. Sales &gt; 95%</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>