Sandbox/force-app/main/default/objects/BRIT__c/fields/PRECOND_ACCESSO_Perf_Veicoli_Comm__c.field-meta.xml
<CustomField>
    <fullName>PRECOND_ACCESSO_Perf_Veicoli_Comm__c</fullName>
    <description>PRECONDIZIONI DI ACCESSO - Perf. Veicoli Commerciali</description>
    <label>PRECOND. ACCESSO - Perf. Veicoli Comm.</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>