Sandbox/force-app/main/default/objects/BRIT__c/fields/SOST_DEL_BUSINESS_Penetr_KINTO_ONE__c.field-meta.xml
<CustomField>
    <fullName>SOST_DEL_BUSINESS_Penetr_KINTO_ONE__c</fullName>
    <description>SOSTENIBILITA&apos; DEL BUSINESS - Penetrazione KINTO ONE</description>
    <label>SOST. DEL BUSINESS - Penetr. KINTO ONE</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>