Sandbox/force-app/main/default/objects/BRIT__c/fields/TOYOTA_WAY_Gestione_Lead__c.field-meta.xml
<CustomField>
    <fullName>TOYOTA_WAY_Gestione_Lead__c</fullName>
    <description>TOYOTA WAY - Gestione Lead</description>
    <label>TOYOTA WAY - Gestione Lead</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>