Sandbox/force-app/main/default/objects/BRIT__c/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <description>Zona</description>
    <label>Zona</label>
    <length>5</length>
    <type>Text</type>
</CustomField>