Sandbox/force-app/main/default/objects/BRIT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codice__c</columns>
    <columns>Gruppo__c</columns>
    <columns>Mese__c</columns>
    <columns>Anno__c</columns>
    <columns>Distretto__c</columns>
    <columns>Marchio__c</columns>
    <columns>Nome_dealer__c</columns>
    <columns>Zona__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>